# MusicTheory

./: .gitignore  Cargo.toml  README.md
benches/: bench_tuning.rs  bench_voice_leading.rs
examples/: showcase.ipynb
mt_macros/: Cargo.toml
mt_macros/src/: lib.rs
python/: Cargo.toml
python/src/: implementation.rs  lib.rs
src/: accidental.rs  analyze.rs  clef.rs  containers.rs  duration.rs  dynamics.rs  enharmonic.rs  export.rs  generator.rs  key.rs  letter.rs  lib.rs  main.rs  matrix.rs  note.rs  octave_letter.rs  pcset.rs  pitch_class.rs  placed.rs  prelude.rs  scales.rs  semitone.rs  stem_direction.rs  tuning.rs  util.rs
src/chord/: eq.rs  interval_set.rs  mod.rs  parse.rs  quality.rs  size.rs  types.rs
src/enharmonic/: eq.rs  mod.rs  ord.rs  without_spelling.rs  wrapper.rs
src/harmony/: key.rs  mod.rs  mode.rs  scale_degree.rs
src/interval/: consts.rs  helper.rs  mod.rs  number.rs  quality.rs  size.rs  stability.rs  tests.rs
src/matrix/: consts.rs  label.rs  mod.rs
src/notation/: clef.rs  mod.rs  octave_letter.rs  stem_direction.rs
src/note/: accidental.rs  letter.rs  mod.rs  pitch.rs  pitch_class.rs  pitch_const.rs
src/pitch/: accidental.rs  class.rs  consts.rs  letter.rs  mod.rs  spelling.rs  tests.rs
src/scales/: analyze.rs  build_from.rs  chromatic.rs  define.rs  dyn_scale.rs  exact_scale.rs  heptatonic.rs  hexatonic.rs  mod.rs  n_scale.rs  numeral.rs  octatonic.rs  pentatonic.rs  rework.rs  rooted.rs  sized_scale.rs  typed_scale.rs
src/set/: icv.rs  mod.rs  pcset.rs  pcset_into_iter.rs
src/tuning/: just_intonation.rs  mod.rs  (+3 more)
(+50 files in other folders)
