[package]
name = "music_theory"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
authors = ["abscosmos <joshua@dinoslice.com>"]
repository = "https://github.com/abscosmos/MusicTheory"
publish = false

[workspace]
members = ["mt_macros"]
resolver = "2"

[dependencies]
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "1.0.63"
regex = "1.10.6"
paste = "1.0.15"
mt_macros = { path = "mt_macros" }
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
criterion = "0.7.0"
